Code to allow renaming of a column that is used in an index